tests/PhiCore/compile_failure/src/Math/Vector2.unary_minus.fail.cpp
#include <Phi/Math/Vector2.hpp>

int main()
{
    phi::Vector2<unsigned> v(1, 2);

    phi::Vector2<unsigned> v2 = -v;
}
